--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -3,8 +3,7 @@
     .navbar-header
       %button.navbar-toggle{ type: "button", 
         "data-toggle" => "collapse", 
-        "data-target" => "#main-menu",
-        "aria-expanded": "false" }
+        "data-target" => "#main-menu" }
 
         %span.sr-only Toggle Navigation
         %span.icon-bar
