--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 
   <%= render partial: 'layouts/menu' %>
 
-  <%= yield %>
+  <div class="row">
+    <div class="col-md-12">
+      <%= yield %>
 
 </body>
 </html>
