--- a/app/views/repeaters/show.html.haml
+++ b/app/views/repeaters/show.html.haml
@@ -1,8 +1,8 @@
 %p#notice= notice
 
 %p
-  %b Entry:
-  = @repeater.entry
+  %b Bill:
+  = @repeater.bill.payee
 %p
   %b Frequency:
   = @repeater.frequency
