--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(entry) do |f| %>
-  <% if entry.errors.any? %>
+<%= form_for(bill) do |f| %>
+  <% if bill.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(entry.errors.count, "error") %> prohibited this entry from being saved:</h2>
+      <h2><%= pluralize(bill.errors.count, "error") %> prohibited this bill from being saved:</h2>
 
       <ul>
-      <% entry.errors.full_messages.each do |message| %>
+      <% bill.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.label :payee %>
+    <%= f.text_field :payee %>
   </div>
 
   <div class="field">
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :day %>
-    <%= f.number_field :day %>
+    <%= f.label :due_on %>
+    <%= f.number_field :due_on %>
   </div>
 
   <div class="field">
