--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -10,11 +10,12 @@
         %span.icon-bar
         %span.icon-bar
 
-      = link_to "Cashflow", root_path, class: "navbar-brand"
+      = link_to "Cash Trickle", root_path, 
+        class: "navbar-brand"
 
     .collapse.navbar-collapse#main-menu  
       %ul.nav.navbar-nav
         %li= link_to "Deltas", deltas_path
         %li= link_to "Payments", payments_path
         %li= link_to "Repeaters", repeaters_path
-        %li= link_to "Entries", entries_path
+        %li= link_to "Bills", bills_path
