--- a/app/views/repeaters/_form.html.haml
+++ b/app/views/repeaters/_form.html.haml
@@ -7,8 +7,8 @@
           %li= msg
 
   .field
-    = f.label :entry_id
-    = f.text_field :entry_id
+    = f.label :bill_id
+    = f.text_field :bill_id
   .field
     = f.label :frequency
     = f.number_field :frequency
